<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/img_login_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_edit_bg"
                android:cursorVisible="false"
                android:hint="@string/text_login_phone"
                android:inputType="phone"
                android:padding="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/login_edit_bg"
                    android:cursorVisible="false"
                    android:hint="@string/text_login_code"
                    android:inputType="number"
                    android:padding="5dp" />

                <Button
                    android:textAllCaps="false"
                    android:id="@+id/btn_send_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/login_btn_bg"
                    android:text="@string/text_login_send"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_btn_bg"
                android:text="@string/text_login_login"
                android:textColor="@android:color/white" />

<!--            <TextView-->
<!--                android:id="@+id/tv_password_login"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:gravity="right"-->
<!--                android:textColor="#00BCD4"-->
<!--                android:text="密码登录"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"/>-->

        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/ic_qq"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/qq"
        android:layout_marginBottom="100dp"
        android:scaleType="fitCenter"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_login_yes" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/text_login_agreement_1" />

        <TextView
            android:id="@+id/tv_user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login_agreement_2"
            android:textColor="#00BCD4" />

    </LinearLayout>


</RelativeLayout>