<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:background="@drawable/white_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_add_firend_title"
                android:textColor="@color/colorAccent" />

            <EditText
                android:textColor="@android:color/black"
                android:id="@+id/et_msg"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="15dp"
                android:background="@drawable/login_edit_bg"
                android:hint="@string/dialog_add_firend_msg"
                android:paddingLeft="10dp"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.5"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dialog_add_firend_cancel"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_add_friend"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dialog_add_firend_add"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>